Fix(NewExpenseForm): align label to center position

--- a/src/components/NewExpense/NewExpenseForm.css
+++ b/src/components/NewExpense/NewExpenseForm.css
@@ -32,6 +32,7 @@
 
 .newexpense-container__control{
     display: flex;
+    align-items: center;
 }
 
 .newexpense-container__button{
